--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,5 @@
-#centralwidget, #panel5, #panel6 {
-    background-color: #444444;
+#centralwidget, #panel6, #panel7 {
+    background-color: #333333;
 }
 
 #appLabel, #info, #status, #userUsername {
@@ -7,7 +7,7 @@
 }
 
 #panel4 {
-    border: none;
+    border: 2px solid white;
     background-color: #222222;
 }
 
@@ -15,13 +15,21 @@
 	width: 100%;
 	border: none;
 	border-radius: 0px;
-    margin: 2px;
+    margin: 4px;
 }
 
 #sidebarApps, #sidebarInstalled, #sidebarAbout {
     background-color: #00aaff;
 }
 
+#sidebarApps:pressed, #sidebarInstalled:pressed, #sidebarAbout:pressed {
+    background-color: #4dc3ff;
+}
+
 #userAccount {
 	background-color: #33dd88;
+}
+
+#userAccount:pressed {
+	background-color: #74e8ae;
 }
